src/main/java/com/example/demo/errors/exception/RestApiException.java
package com.example.demo.errors.exception;

import com.example.demo.errors.errorCode.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class RestApiException extends RuntimeException{
    private final ErrorCode errorCode;
}
